# POO-22-23

./: CMakeLists.txt  README.md  main.cpp
Header/: Person.h
Person/: Person.cpp  Person.h
